# bayes_estimate

./: .editorconfig  .gitignore  Cargo.toml  README.md
examples/: simple_example.rs  sir_example.rs
examples/hello_world/: main.rs
examples/simple_example/: main.rs
src/: UdU.rs  covariance_filter.rs  information_filter.rs  lib.rs  matrix.rs  models.rs  noise.rs  ud_filter.rs
src/estimators/: covariance.rs  information.rs  information_root.rs  mod.rs  sir.rs  ud.rs  unscented.rs
src/filters/: covariance_filter.rs  information_filter.rs  mod.rs  ud.rs  ud_filter.rs
src/linalg/: cholesky.rs  mod.rs  rcond.rs
src/matrix/: mat.rs  mod.rs
src/mine/: matrix.rs  mod.rs
tests/: generic_shapeconstraint.rs  null_estimator.rs  null_filter.rs  simd.rs  test_estimators.rs  test_filters.rs  test_linear_estimators.rs  test_linear_states.rs
tests/fat_estimators/: mod.rs
