[package]
name = "bayes_estimate"
version = "0.5.3"
authors = ["Michael Stevens <mail@michael-stevens.de>"]
edition = "2018"
description = "Bayesian estimation library. Kalman filter, Informatiom, Square root, Information root, Unscented and UD filters. Numerically and dimensionally generic implementation using nalgebra. Provides fast numerically stable estimation solutions."
repository = "https://git.code.sf.net/p/bayesclasses/rustcode"
readme = "README.md"
categories = [ "science", "science::robotics" ]
keywords = [ "kalman", "bayesian", "linear", "discrete" ]
license = "MIT "

[dependencies]
nalgebra = {path ="../nalgebra", version="0.24.1"}
rand = "0.7.3"
rand_distr = "0.3.0"
num-traits = "0.2.14"

[dev-dependencies]
approx = "0.4.0"

[lib]
name = "bayes_estimate"
path = "src/lib.rs"
