[package]
name = "bayes_estimate"
version = "0.8.0"
authors = ["Michael Stevens <mail@michael-stevens.de>"]
edition = "2018"
description = "Bayesian estimation library. Kalman filter, Informatiom, Square root, Information root, Unscented and UD filters. Numerically and dimensionally generic implementation using nalgebra. Provides fast numerically stable estimation solutions."
repository = "https://sourceforge.net/p/bayesclasses/rustcode"
readme = "README.md"
categories = [ "science", "science::robotics" ]
keywords = [ "kalman", "bayesian", "linear", "discrete", 'no_std' ]
license = "MIT"

[dependencies]
nalgebra = {version = "0.25"}
rand_core = "0.6"
rand_distr = "0.4"
num-traits = "0.2"

[dev-dependencies]
approx = "0.4"
rand = "0.8"

[lib]
name = "bayes_estimate"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
